--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express-handlebars": "^3.1.0",
     "mongojs": "^2.6.0",
     "mongoose": "^5.7.0",
-    "morgan": "^1.9.1"
+    "morgan": "^1.9.1",
+    "path": "^0.12.7"
   }
 }
